--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 		}
 	</script>
 	<h1 style="color:white">Mostrar Datos</h1>
-	<input type="button" class="boton_personalizado" value="Mostrar Datos" onclick="mostrar()">
+	<input type="button" class="boton_personalizado" value="Mostrar Datos" onclick="Obtener_Credenciales()">
 	<input type="button" class="boton_personalizado" value="Cargar Datos" onclick="Cargar_Dato()">
 	<div id="Arbol" style="visibility: hidden" class="contenedor-arbol">
 		<h1 style="color:white">Arbol:</h1>
