--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
 <body >
 	<script src="js/index.js"></script>
 	<script>
+		var token_acceso="";
 		var actual =0;
 		function mostrar(){
 			if(actual!=0){
@@ -30,13 +31,13 @@ body {
 			}else{
 				var act = document.getElementById("Arbol");
 				actual = 1;
-				Get_Datos();
+				Obtener_Credenciales(1);
 				act.style = "display:show;";	
 			}
 		}
 	</script>
 	<h1 style="color:white">Mostrar Datos</h1>
-	<input type="button" class="boton_personalizado" value="Mostrar Datos" onclick="Obtener_Credenciales()">
+	<input type="button" class="boton_personalizado" value="Mostrar Datos" onclick="mostrar()">
 	<input type="button" class="boton_personalizado" value="Cargar Datos" onclick="Cargar_Dato()">
 	<div id="Arbol" style="visibility: hidden" class="contenedor-arbol">
 		<h1 style="color:white">Arbol:</h1>
