--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 	</script>
 	<h1 style="color:white">Mostrar Datos</h1>
 	<input type="button" class="boton_personalizado" value="Mostrar Datos" onclick="mostrar()">
-	<input type="button" class="boton_personalizado" value="Cargar Datos" onclick="Cargar_Dato()">
+	<input type="button" class="boton_personalizado" value="Cargar Datos" onclick="Obtener_Credenciales(2)">
 	<div id="Arbol" style="visibility: hidden" class="contenedor-arbol">
 		<h1 style="color:white">Arbol:</h1>
 		<nav id="MArbol">
